--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -18,8 +18,7 @@ alerting:
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'
 rule_files:
-  - "alert_rules.yml"
-  - "recording_rules.yml"
+  - "/etc/prometheus/alert_rules.yml"
   # - "/path/to/other/rules/*.yml"
 
 scrape_configs:
@@ -31,17 +30,30 @@ scrape_configs:
     scrape_interval: 30s
     scrape_timeout: 15s
 
-  # Application monitoring
   - job_name: 'Applications'
     static_configs:
       - targets:
-        - 'frontend:3000'
         - 'backend:8000'
     metrics_path: /metrics
     scrape_interval: 10s
     scrape_timeout: 8s
 
-  # Docker containers (if using cAdvisor)
+  - job_name: 'frontend_http_probe'
+    metrics_path: /probe
+    params:
+      module: [http_2xx]  # <- probe module from blackbox.yaml
+    static_configs:
+      - targets:
+          - http://frontend:3000
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox-exporter:9115
+
+
   - job_name: 'cadvisor'
     static_configs:
       - targets:
