--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,31 +1,22 @@
-global:
-  # How frequently to scrape targets by default
+global: 
   scrape_interval: 15s
-  
-  # How long until a scrape request times out
   scrape_timeout: 15s
-  
-  # How frequently to evaluate rules
   evaluation_interval: 15s
 
 alerting:
   alertmanagers:
     - static_configs:
         - targets:
-          - "alertmanager:9093"  # Alertmanager address
-      # Optional: Add path prefix if Alertmanager is behind a reverse proxy
-      # path_prefix: /alertmanager
+          - "alertmanager:9093"
 
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'
 rule_files:
   - "/etc/prometheus/alert_rules.yml"
-  # - "/path/to/other/rules/*.yml"
 
 scrape_configs:
-
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: 
+        - 'localhost:9090' 
     metrics_path: /metrics
     scrape_interval: 30s
     scrape_timeout: 15s
@@ -41,10 +32,10 @@ scrape_configs:
   - job_name: 'frontend_http_probe'
     metrics_path: /probe
     params:
-      module: [http_2xx]  # <- probe module from blackbox.yaml
+      module: [http_2xx]
     static_configs:
       - targets:
-          - http://frontend:3000
+        - 'http://frontend:3000' 
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
@@ -53,11 +44,10 @@ scrape_configs:
       - target_label: __address__
         replacement: blackbox-exporter:9115
 
-
   - job_name: 'cadvisor'
     static_configs:
       - targets:
-        - ['cadvisor:8080']
+        - 'cadvisor:8080' 
     metrics_path: /metrics
     scrape_interval: 10s
     scrape_timeout: 8s
@@ -65,7 +55,7 @@ scrape_configs:
   - job_name: 'loki'
     static_configs:
       - targets:
-        - ['loki:3100']
+        - 'loki:3100'  
     metrics_path: /metrics
     scrape_interval: 10s
     scrape_timeout: 8s
@@ -73,7 +63,7 @@ scrape_configs:
   - job_name: 'alertmanager'
     static_configs:
       - targets:
-        - ['alertmanager:3100']
+        - 'alertmanager:9093' 
     metrics_path: /metrics
     scrape_interval: 10s
     scrape_timeout: 8s
@@ -81,17 +71,7 @@ scrape_configs:
   - job_name: 'postgres'
     static_configs:
       - targets:
-        - ['postgres_exporter:9187']
+        - 'postgres_exporter:9187' 
     metrics_path: /metrics
     scrape_interval: 20s
     scrape_timeout: 15s
-
-  
-
-
-
-# Storage configuration
-# storage:
-#   tsdb:
-#     retention.time: 30d
-#     retention.size: 10GB
