--- a/docker-compose.monitor.yml
+++ b/docker-compose.monitor.yml
@@ -1,6 +1,7 @@
 services:
   prometheus:
     image: prom/prometheus:latest
+    container_name: prometheus
     restart: unless-stopped
     ports:
       - "9092:9090"
@@ -17,6 +18,7 @@ services:
 
   grafana:
     image: grafana/grafana:latest
+    container_name: grafana
     restart: unless-stopped
     environment:
       GF_SECURITY_ADMIN_USER: $GRAFANA_ADMIN_USER
@@ -32,6 +34,7 @@ services:
 
   loki:
     image: grafana/loki:latest
+    container_name: loki
     restart: unless-stopped
     ports:
       - "3084:3100"
@@ -44,6 +47,7 @@ services:
 
   promtail:
     image: grafana/promtail:latest
+    container_name: promtail
     restart: unless-stopped
     volumes:
       - ./promtail/promtail-config.yml:/etc/promtail/promtail.yml
@@ -60,6 +64,7 @@ services:
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
     restart: unless-stopped
     ports:
       - 8082:8080
@@ -79,6 +84,7 @@ services:
 
   alertmanager:
     image: prom/alertmanager:latest
+    container_name: alertmanager
     restart: unless-stopped
     volumes:
       - ./alertmanager/alertmanager.yml:/etc/alertmanager.yml
@@ -93,6 +99,7 @@ services:
 
   blackbox-exporter:
     image: prom/blackbox-exporter:latest
+    container_name: blackbox-exporter
     ports:
       - "9115:9115"
     volumes:
@@ -104,6 +111,7 @@ services:
 
   postgres_exporter:
     image: prometheuscommunity/postgres-exporter
+    container_name: postgres_exporter
     restart: unless-stopped
     environment:
       DATA_SOURCE_NAME: $DATA_SOURCE
@@ -114,6 +122,7 @@ services:
 
   telegram-bot:
     image: metalmatze/alertmanager-bot:0.4.3
+    container_name: telegram-bot
     restart: unless-stopped
     environment:
       ALERTMANAGER_URL: $ALERTMANAGER_URL_ID
@@ -121,6 +130,7 @@ services:
       STORE: bolt
       TELEGRAM_ADMIN: $TELEGRAM_ADMIN_ID
       TELEGRAM_TOKEN: $TELEGRAM_TOKEN_API
+      TELEGRAM_ALLOWED_USERS: $TELEGRAM_ALLOWED_USER
     volumes:
     - telegram-bot-data:/data
     ports:
