--- a/docker-compose.monitor.yml
+++ b/docker-compose.monitor.yml
@@ -86,6 +86,7 @@ services:
     image: prom/alertmanager:latest
     container_name: alertmanager
     restart: unless-stopped
+    env_file: .env
     volumes:
       - ./alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
       - alertmanager-data:/alertmanager
